[tool.poetry]
name = "infinity"
version = "0.1.0"
description = "Testing project Infinity with Docker"
authors = ["Dishalex <131618968+Dishalex@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
